--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -753,6 +753,12 @@ section {
     font-size: 18px;
 }
 
+.services .title-smaller {
+    font-weight: 700;
+    margin-bottom: 15px;
+    font-size: 17px;
+}
+
 .services .title a {
     color: #111;
 }
@@ -1449,16 +1455,22 @@ section {
 --------------------------------------------------------------*/
 .contact .contact-about h3 {
     font-size: 28px;
-    margin: 0 0 10px 0;
+    margin: 0 0 20px 0;
     padding: 0;
     line-height: 1;
     font-weight: 700;
     letter-spacing: 1px;
     color: #222222;
 }
-
+.contact .contact-about br{
+    margin: 0 0 10px 0;
+}
+.contact .contact-about span{
+    color: #6c63ff;
+    font-weight: bold;
+}
 .contact .contact-about p {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 24px;
     font-family: "Raleway", sans-serif;
     color: #888;
